Support passing target resource id in transfer message.
refs https://github.com/LD4P/sinopia_editor/issues/3555
